  - Prevent spam if a player's locale is invalid, courtesy of Warriorrrr with PR #5314.
  - Improve startup logging/initialization, courtesy of Articdive & LlmDl with PR #5299.
0.97.2.2:
  - Fix Citizens NPCs causing error on PlayerTeleportEvent, courtesy of Articdive with PR #5319.
0.97.2.3:
  - Change PlayerCacheUtil to once again check for a fakeplayer resident.
  - Fix PlayerCacheUtil preventing plot permissions from working properly. 
  - Fix missing command feedback on many /tw toggle commands.
0.97.2.4:
  - Fix Global messages stripping their colour.
  - Remove old Outpost checking code and references to Articdive which were not spelled correct, courtesy of Articdive with PR #5324.
  - Add a size limit for the town_block_ratio option, courtesy of Warriorrrr with PR #5326.
  - New Config Option: town.town_block_limit
    - Default: 0
    - The maximimum amount of townblocks a town can have, if town_block_ratio is 0 the max size will be decided by the town_levels. 
    - Set to 0 to have no size limit.
  - Fix automatic renaming of invalid and duplicate town and nation names failing some of the time.
  - Fix EventWar not handling the OutlawTeleportEvent.
  - Fix resident/town counts being shown on the status screens when "and more..." was being used on long lists.
    - Closes #5331. 
  - Lists of TownyObjects (resident lists, town lists, nation lists) will no longer use their longer formatted names if the list is over 19.
    - Closes #5332. 
  - Fix Status Screen components' hovering bleeding over into blank spaces further along the line.
    - Closes #5332.
0.97.2.5:
  - Add nation's capital to the nation status screen.
  - Add protection for glow berries being harvest off cave vines.
    - Treated as a destroy test.
  - Prevent outlaws from being able to join towns, courtesy of Warriorrrr with PR #5329.
  - Add town join date to a resident's status screen in the town hover section.
    - Closes #5282.
  - Bump language files to 0.126.